--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         stage('AWS Commands'){
             steps {
                 script {
-                    withAWS(credentialsId: 'AWS_cred.', region: 'us-east-1'){
+                    withAWS(credentialsId: 'AWS_Credentials', region: 'us-east-1'){
                         sh 'aws sts get-caller-identity'
                     }
                 }
