--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,5 +19,14 @@ pipeline {
                 }
             }
         }
+        stage('Kubernetes login') {
+            steps {
+                script{
+                    withAWS(credentials: 'AWS_Credentials', region: 'us-east-1') {
+                        sh 'aws eks update-kubeconfig --region us-east-1 --name VETTEC'
+                    }
+                }
+            }
+        }
     }
 }
