--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,5 +28,17 @@ pipeline {
                 }
             }
         }
+        stage('Create Namespace') {
+            steps {
+                script {
+                    try {
+                        sh 'kubectl apply -f manifest.yaml'
+                    } catch (Exception e) {
+                        echo 'Exception occured: ' + e.toString()
+                        echo 'Handle the Exception!'
+                    }
+                }
+            }
+        }
     }
 }
