--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,11 +31,13 @@ pipeline {
         stage('Create Namespace') {
             steps {
                 script {
-                    try {
-                        sh 'kubectl apply -f manifest.yaml'
-                    } catch (Exception e) {
-                        echo 'Exception occured: ' + e.toString()
-                        echo 'Handle the Exception!'
+                    withAWS(credentials: 'AWS_Credentials', region: 'us-east-1') {
+                        try {
+                            sh 'kubectl apply -f manifest.yaml'
+                        } catch (Exception e) {
+                            echo 'Exception occured: ' + e.toString()
+                            echo 'Handle the Exception!'
+                        }
                     }
                 }
             }
