--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,3 +2,30 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: jimyywang-namespace
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: flask-deployment
+  namespace: jimyywang-namespace
+  labels:
+    app: flask
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: flask
+  template:
+    metadata:
+      labels:
+        app: flask
+    spec:
+      containers:
+      - name: flask-app
+        image: jimyywang/flask-app
+        ports:
+        - containerPort: 5000
+        imagePullPolicy: Always
+---
+
