--- a/manifest.yaml
+++ b/manifest.yaml
@@ -29,3 +29,16 @@ spec:
         imagePullPolicy: Always
 ---
 
+apiVersion: v1
+kind: Service
+metadata:
+  name: flask-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: flask
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+---
